--- a/.gitignore
+++ b/.gitignore
@@ -56,7 +56,7 @@ TestClass.class
 /.gitconfig
 
 webgoat.gitconfig
-node_modules/
+#node_modules/
 /test-results/
 /playwright-report/
 /blob-report/
